fix wrap on many subjects

--- a/web/themes/custom/asulib_barrio/scss/style.scss
+++ b/web/themes/custom/asulib_barrio/scss/style.scss
@@ -166,7 +166,7 @@ article:not(.node--view-mode-full-metadata) .inline-list, .field--name-field-cop
 .all-subjects .inline-list li,
 .all-memberships .inline-list li,
 .agents .inline-list li{
-  display: inline;
+  display: inline-block;
 }
 
 .inline-list li {
